ログアウト機能追加

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div class="navigate">
         <a routerLink="" appLinkStyle brown="#6A4D32" white="white">トップページ</a>
         <a routerLink="bookregist" appLinkStyle brown="#6A4D32" white="white">書籍登録</a>
-        <a routerLink="top" appLinkStyle brown="#6A4D32" white="white">ログアウト</a>
+        <a routerLink="top" appLinkStyle brown="#6A4D32" white="white" (click)="onClick()">ログアウト</a>
       </div>
     </nav>
   </header>
